[package]
name = "rosu-memory"
version = "2.0.0"
edition = "2021"

# release as lib
[lib]
name = "rosu_memory"
path = "src/lib.rs"

[dependencies]
rosu-mem = { git = "https://github.com/486c/rosu-mem.git", tag = "v2.0.0" }
eyre = "0.6.12"
rosu-pp = { version = "2.0.0" }
serde = { version = "1.0.219", default-features = false, features = ["derive"] }
serde_json = "1.0.140"
serde_repr = "0.1.20"


[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[profile.release.package."*"]
opt-level = "s"
